<resources>
    <string name="app_name">DribbView</string>

    <string name="title_home">DribbView</string>
    <string name="title_likes">Likes</string>
    <string name="title_buckets">Buckets</string>

    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_likes">Likes</string>
    <string name="drawer_menu_buckets">Buckets</string>

    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="bucket">Bucket</string>
    <string name="like">Like</string>
    <string name="share">Share</string>

    <string name="user_profile_picture">User profile picture</string>
    <string name="share_shot">Share this amazing shot!</string>

    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>

    <string name="new_bucket_title">New bucket</string>
    <string name="new_bucket_create">Create</string>
    <string name="new_bucket_cancel">Cancel</string>
    <string name="new_bucket_name">Bucket name</string>
    <string name="new_bucket_description">Bucket description</string>

    <string name="shot_author_picture">Shot author picture</string>
    <string name="shot_count">{0,choice,0#0 shot|1#1 shot|1&lt;{0} shots}</string>
    <string name="shot_detail_loading_buckets">Loading buckets, just one second…</string>
    <string name="shot_image">Shot image</string>

    <string name="auth_activity_title">Log into Dribbble</string>

    <string name="activity_login_btn_text">Log into Dribbble</string>
    <string name="activity_login_icon">Dribbble icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_bucket">Choose bucket</string>
    <string name="comment">Show Comments...</string>
    <string name="follow">Follow + </string>
    <string name="unfollow">Unfollow -</string>
    <string name="drawer_menu_follows">Follows</string>
    <string name="title_follow">Followed</string>
    <string name="title_following">Following</string>
    <string name="drawer_menu_following">Following</string>

</resources>
